--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -162,7 +162,7 @@
   color: #fff;
 }
 
-.main_sidenav_block .main_sidenav_info .main_sidenav_item_button svg:hover{
+.main_sidenav_block .main_sidenav_info .main_sidenav_item_button i:hover{
 	cursor: pointer;
 }
 
@@ -172,12 +172,12 @@
 	font-family: Malgun Gothic;
 }
 
-.navbar .btn_sidenav svg{
+.navbar .btn_sidenav i{
 	font-size: 20px;
 	color: #9c2e92;
 }
 
-.navbar .btn_sidenav svg:hover{
+.navbar .btn_sidenav i:hover{
 	cursor: pointer;
 }
 
