--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@
 // Pages
 // ----------------------------------------------------------------------
 @import "pages/homepage";
+@import "pages/asian-template";
 
 // ----------------------------------------------------------------------
 // Responsive
