--- a/src/views/layouts/footer.html
+++ b/src/views/layouts/footer.html
@@ -1,8 +1,12 @@
 <footer class="footer-container">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <p>Footer Container</p>
+      	<div class="contact">
+      		<p class="conttact_title">문의하기 | 이용약관 | 개인정보 처리방침 </p>
+      		<p class="contact_qa">상호명 : 패키지모아 | 대표 : 송민근 | 대표번호 : 1644-0971</p>
+      		<p class="contact_qa">문의 : sminkeun@naver.com | 운영시간 : 평일 09:30 ~ 18:30</p>
+      	</div>
       </div>
     </div>
   </div>
