--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -22,326 +22,449 @@
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-  }
+}
   /* HTML5 display-role reset for older browsers */
   article, aside, details, figcaption, figure, 
   footer, header, hgroup, menu, nav, section {
     display: block;
-  }
-  body {
+}
+body {
     line-height: 1;
-  }
-  ol, ul {
+}
+ol, ul {
     list-style: none;
-  }
-  blockquote, q {
+}
+blockquote, q {
     quotes: none;
-  }
-  blockquote:before, blockquote:after,
-  q:before, q:after {
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
     content: '';
     content: none;
-  }
-  table {
+}
+table {
     border-collapse: collapse;
     border-spacing: 0;
-  }
+}
 
-  .container_main{
+$color_1: inherit;
+$color_2: #fff;
+$color_3: #9c2e92;
+$color_4: #787878;
+$font_family_1: Malgun Gothic;
+$background_color_1: #9c2e92;
+$background_color_2: inherit;
+
+.container_main {
     width: 100%;
     min-width: 320px;
     max-width: 768px;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    .main_sidenav {
+      display: block;
+      position: fixed;
+      right: 0;
+      top: 0;
+      height: 100%;
+      width: 0;
+      overflow-y: auto;
+      z-index: 9999;
+      background: #fff;
+      transition: all .5s;
+      -webkit-transition: all .5s;
+      -moz-transition: all .5s;
+      .main_sidenav_content{
+        ul {
+            text-align: center;
+            margin: 0 auto;
+            padding: 0 20px;
+            li {
+                padding: 10px 0;
+                border-bottom: 1px solid #e1e1e1;
+                display: flex;
+                color: $color_3;
+                align-items: center;
+                a {
+                    display: block;
+                    text-align: left;
+                    font-weight: 400;
+                    color: $color_3;
+
+                }
+            }
+        }
+      }
   }
-  .container_main .main_sidenav{
-   display: block;
-   position: fixed;
-   right: 0;
-   top: 0;
-   height: 100%;
-   width: 0;
-   overflow-y: auto;
-   z-index: 9999;
-   background: #fff;
-   transition: all .5s;
-   -webkit-transition: all .5s;
-   -moz-transition: all .5s;
- }
- .main_sidenav{
-	/*height: 100%;
-  width: 270px;
-  background-color: #fff;
-  position: fixed;
-  z-index: 100;
-  overflow: auto;*/
+  .ovelay_menu {
+      visibility: hidden;
+      position: absolute;
+      opacity: 0;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.56);
+      z-index: 9;
+  }
 }
-.control_form_search{
-  padding-right: 10px;
-  position: relative;
-  display: flex;
-  flex-direction: row;
+.control_form_search {
+    padding-right: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    &:before {
+      content: '';
+      background-repeat: no-repeat;
+      background-size: 100%;
+      position: absolute;
+  }
+  &:after {
+      content: '';
+      width: 29px;
+      height: 29px;
+      background-image: url(../images/icon/bullet_search.png);
+      background-repeat: no-repeat;
+      background-size: 100%;
+      position: absolute;
+      right: 0;
+      position: absolute;
+  }
+  .input_key_search {
+      margin-left: 30px;
+      width: 100%;
+      padding: 5px 15px;
+      outline: none;
+      border: none;
+      border-bottom: 1px solid #e1e1e1;
+  }
 }
+.control_form_search.input_control_left {
+    &:before {
+      width: 30px;
+      height: 28px;
+      background-image: url(../images/icon/bullet_maps01.png);
+  }
+}
+.control_form_search.input_control_right {
+    &:before {
+      width: 29px;
+      height: 31px;
+      background-image: url(../images/icon/bullet_date01.png);
+  }
+}
+.main_sidenav_card {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+.main_sidenav_animate_right {
+    position: relative;
+    animation: animateright 0.4s;
+}
+.main_sidenav_block {
+    .main_sidenav_info {
+        background-color: $background_color_1;
+        height: 150px;
+        .main_sidenav_item {
+            width: 100%;
+            display: block;
+            padding: 8px 16px;
+            text-align: left;
+            border: none;
+            white-space: normal;
+            float: none;
+            outline: 0;
+        }
+        .main_sidenav_item_large {
+            font-size: 18px;
+        }
+        .main_sidenav_item_button {
+            border: none;
+            display: inline-block;
+            padding: 8px 16px;
+            vertical-align: middle;
+            overflow: hidden;
+            text-decoration: none;
+            color: $color_1;
+            background-color: $background_color_2;
+            text-align: right;
+            cursor: pointer;
+            white-space: nowrap;
+            color: $color_2;
+            i {
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+        .main_sidenav_login{
+            text-align: center;
+            margin-top: 20px;
 
-.control_form_search:before{
-  content: '';
-  background-repeat: no-repeat;
-  background-size: 100%;
-  position: absolute;
-}
-.control_form_search:after{
-  content: '';
-  width: 29px;
-  height: 29px;
-  background-image: url(../images/icon/bullet_search.png);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  position: absolute;
-  right: 0;
-  position: absolute;
-}
-.control_form_search .input_key_search{
-  margin-left: 30px;
-  width: 100%;
-  padding: 5px 15px;
-  outline: none;
-  border:none;
-  border-bottom: 1px solid #e1e1e1;
-}
-.control_form_search.input_control_left:before{
- width: 30px;
- height: 28px;
- background-image: url(../images/icon/bullet_maps01.png);
-}
-.control_form_search.input_control_right:before{
- width: 29px;
- height: 31px;
- background-image: url(../images/icon/bullet_date01.png); 
-}
-.main_sidenav_card{
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-}
+            .btn_login{
+                color: #fff;
+                border: 1px solid #fff;
+                margin: 0 auto;
+                padding: 15px;
+                cursor: pointer;
+                border-radius: 5px;
+            }
 
-.main_sidenav_animate_right{
-	position: relative;
-  animation: animateright 0.4s;
-}
-.main_sidenav_block .main_sidenav_info{
-	background-color: #9c2e92 ; 
-	height: 200px;
-}
+            .info_user{
 
-.main_sidenav_block .main_sidenav_info .main_sidenav_item{
-	width: 100%;
-  display: block;
-  padding: 8px 16px;
-  text-align: left;
-  border: none;
-  white-space: normal;
-  float: none;
-  outline: 0;
-}
-
-.main_sidenav_block .main_sidenav_info .main_sidenav_item_large{
-	font-size: 18px;
-}
-
-.main_sidenav_block .main_sidenav_info .main_sidenav_item_button{
-	border: none;
-  display: inline-block;
-  padding: 8px 16px;
-  vertical-align: middle;
-  overflow: hidden;
-  text-decoration: none;
-  color: inherit;
-  background-color: inherit;
-  text-align: right;
-  cursor: pointer;
-  white-space: nowrap;
-  color: #fff;
-}
-
-.main_sidenav_block .main_sidenav_info .main_sidenav_item_button i:hover{
-	cursor: pointer;
+            }
+        }
+    }
 }
 .btn_sidenav {
-  color: #9c2e92;
+    color: $color_3;
 }
-.navbar .title_header{
-	color: #9c2e92;
-	font-size: px2em(29);
-	font-family: Malgun Gothic;
+.navbar {
+    .title_header {
+        color: $color_3;
+        font-size: px2em(29);
+        font-family: $font_family_1;
+    }
+    .btn_sidenav {
+        i {
+            font-size: 20px;
+            color: $color_3;
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
 }
-
-.navbar .btn_sidenav i{
-	font-size: 20px;
-	color: #9c2e92;
+.logo_banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 25px 0;
+    img {
+      margin: 0 auto;
+  }
 }
-
-.navbar .btn_sidenav i:hover{
-	cursor: pointer;
-}
-
-.logo_banner{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 25px 0;
-}
-
-.logo_banner img{
-	margin: 0 auto;
-}
-
 .nav-scroller {
-  position: relative;
-  z-index: 2;
-  height: 3.75rem;
-  overflow-y: hidden;
+    position: relative;
+    z-index: 2;
+    height: 3.75rem;
+    overflow-y: hidden;
+    .nav {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      padding-bottom: 1rem;
+      margin-top: -1px;
+      overflow-x: auto;
+      text-align: center;
+      white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
+  }
 }
-
-.nav-scroller .nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  padding-bottom: 1rem;
-  margin-top: -1px;
-  overflow-x: auto;
-  text-align: center;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
+.owl-carousel {
+    margin-bottom: 2em;
+    .item {
+        position: relative;
+        img {
+            height: 211px;
+        }
+        h4 {
+            position: absolute;
+            color: $color_2;
+            font-weight: 700;
+            font-size: 26px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
 }
-
-
-
-.owl-carousel .item{
-  position: relative;
+.list_tags_more {
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    ul {
+        padding: 20px 0;
+        margin: 0 auto;
+        max-width: 100%;
+        li {
+            margin-right: 5px;
+            margin-bottom: 5px;
+            list-style: none;
+            display: inline-block;
+            a {
+                padding: 5px 25px 5px 5px;
+                border-radius: 15px;
+                background: #fff;
+                border: 1px solid #d7d7d7;
+                text-decoration: none;
+                outline: none;
+                position: relative;
+                color: $color_4;
+                -webkit-transition: all .3s ease-in-out 0s;
+                -o-transition: all .3s ease-in-out 0s;
+                transition: all .3s ease-in-out 0s;
+                &:after {
+                    content: 'x';
+                    position: absolute;
+                    right: 10px;
+                    top: 0;
+                }
+                &:hover {
+                    background: #9c2e92;
+                    color: $color_2;
+                }
+                &:focus {
+                    background: #9c2e92;
+                    color: $color_2;
+                }
+            }
+        }
+    }
 }
-
-.owl-carousel .item img{
-  height: 211px;
+.control_range {
+    width: 100%;
+    .ranger_now {
+      width: 100%;
+  }
 }
-
-.owl-carousel .item h4{
-  position: absolute;
-  color: #fff;
-  font-weight: 700;
-  font-size: 26px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
+.show_local {
+    .list_item {
+      width: 210px;
+      height: 210px;
+      .main_title {
+        a {
+          text-decoration: none;
+          outline: none;
+          color: $color_2;
+          -webkit-transition: all .3s ease-in-out 0s;
+          -o-transition: all .3s ease-in-out 0s;
+          transition: all .3s ease-in-out 0s;
+          &:hover {
+            color: $color_3;
+        }
+        &:focus {
+            color: $color_3;
+        }
+    }
 }
-
-.list_tags_more{
-  width: 100%;
-  overflow-x: auto;
-  overflow-y: hidden;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-  -webkit-overflow-scrolling: touch;
-  white-space: nowrap;
 }
-.list_tags_more::-webkit-scrollbar {
-  display: none
 }
-.list_tags_more ul{
-  padding: 20px 0;
-  margin: 0 auto;
-  max-width: 100%;
-
-}
-.list_tags_more ul li {
-  margin-right: 5px;
-  margin-bottom: 5px;
-  list-style: none;
-  display: inline-block;
-
-}
-.list_tags_more ul li a{
-  padding:5px 25px 5px 5px;
-  border-radius: 10px;
-  background: #fff;
-  border:1px solid #d7d7d7;
-  text-decoration: none;;
-  outline: none;
-  position: relative;
-  color: #787878;
-  -webkit-transition: all .3s ease-in-out 0s;
-  -o-transition: all .3s ease-in-out 0s;
-  transition: all .3s ease-in-out 0s;
-
-}
-.list_tags_more ul li a:after{
-  content: 'x';
-  position: absolute;
-  right:5px;
-}
-.list_tags_more ul li a:hover,
-.list_tags_more ul li a:focus{
-  background:  #9c2e92;
-  color: #fff;
-}
-.control_range{
-  width: 100%;
-
-}
-.control_range .ranger_now{
-  width: 100%
-}
-.show_local{
-
-}
-
-.show_local .list_item{
-  width: 210px;
-  height: 210px;
-}
-.show_local .list_item .main_title{}
-.show_local .list_item .main_title a{
-  text-decoration: none;
-  outline: none;
-  color:#fff;
-  -webkit-transition: all .3s ease-in-out 0s;
-  -o-transition: all .3s ease-in-out 0s;
-  transition: all .3s ease-in-out 0s;
-}
-.show_local .list_item .main_title a:hover,
-.show_local .list_item .main_title a:focus{
-  color:#9c2e92;
-}
-.nar_custom{
-  height: 60px;
-}
-.container_main .ovelay_menu{
-  visibility: hidden;
-  position: absolute;
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-  top:0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.56);
-  z-index: 9;
+.nar_custom {
+    height: 60px;
 }
 .banner {
-  margin-bottom: 2em;
-}
-.banner a{display: block;}
-.banner a img{
-  max-width: 100%;
-  width: 100%;
-}
-.main_footer{
-  min-height: 100px;
-}
-
-
-@media only screen and (max-width: 480px) {
-    .show_local .list_item {
+    margin-bottom: 2em;
+    a {
+      display: block;
+      img {
+        max-width: 100%;
         width: 100%;
     }
+}
+}
+.main_footer {
+    min-height: 100px;
+    border-top: 1px solid #e5e5e5;
+    .contact{
+        padding: 15px 0;
+        .conttact_title{
+            color: #636363;
+        }
+        .contact_qa{
+            color: #8f8f8f;
+        }
+    }
+}
+@media only screen and (max-width: 480px) {
+    .show_local {
+          .list_item {
+            width: 100%;
+        }
+    }
+    .navbar .title_header {
+        font-size: 1.5em;
+    }
+
+    .logo_banner{
+        padding: 5px 0;
+
+        img{
+            width: 85px;
+            height: 60px;
+        }
+    }
+
+    .control_form_search {
+        &:after {
+            width: 25px;
+            height: 25px;
+        }
+        .input_key_search {
+            margin-left: 25px;
+            padding: 2px 10px;
+        }
+    }
+    .control_form_search.input_control_left {
+        margin-bottom: 1em; 
+        &:before {
+         width: 25px;
+         height: 25px;
+        }
+    }
+    .control_form_search.input_control_right {
+        &:before {
+          width: 25px;
+          height: 27px;
+        }
+    }
+    .list_tags_more {
+        ul {
+            padding: 20px 0;
+            margin: 0 auto;
+            max-width: 100%;
+            li {
+                margin-right: 5px;
+                margin-bottom: 5px;
+                list-style: none;
+                display: inline-block;
+                a {
+                    padding: 5px 25px 5px 5px;
+                    border-radius: 15px;
+                    background: #fff;
+                    border: 1px solid #d7d7d7;
+                    text-decoration: none;
+                    outline: none;
+                    position: relative;
+                    color: $color_4;
+                    -webkit-transition: all .3s ease-in-out 0s;
+                    -o-transition: all .3s ease-in-out 0s;
+                    transition: all .3s ease-in-out 0s;
+                    &:after {
+                        content: 'x';
+                        position: absolute;
+                        right: 5px;
+                    }
+                    &:hover {
+                        background: #9c2e92;
+                        color: $color_2;
+                    }
+                    &:focus {
+                        background: #9c2e92;
+                        color: $color_2;
+                    }
+                }
+            }
+        }
+    }
+
 }
