--- a/src/views/partials/banner.html
+++ b/src/views/partials/banner.html
@@ -1,9 +1,3 @@
-<section class="banner-container">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="title-block">Banner</p>
-      </div>
-    </div>
-  </div>
-</section>
+<div class="logo_banner">
+  <img src="images/icon/banner_logo.png">
+</div>
