--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -107,16 +107,16 @@
 }
 @mixin scroll {
   &::-webkit-scrollbar {
-    width: 8px;
+    width: 1px;
     height: 10px;
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 8px;
-    background: #aaaaaa;
+    background: transparent;
     height: 5px;
   }
   &::-webkit-scrollbar-track {
-    background: #f5f5f5;
+    background: transparent;
     height: 5px;
     border-radius: 10px;
   }
