--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&subset=vietnamese');
 
 // ----------------------------------------------------------------------
-@import 'owl.carousel/dist/assets/owl.carousel.css';
+// @import 'owl.carousel/dist/assets/owl.carousel.css';
 // Base
 // ----------------------------------------------------------------------
 @import "base/mixins";
