--- a/src/styles/pages/_asian-template.scss
+++ b/src/styles/pages/_asian-template.scss
@@ -1,6 +1,7 @@
 .asian-template {
   background: #f3f3f3;
   padding: 25px;
+  margin-top: 60px;
   display: block;
   @media screen and (max-width: 567px) {
     padding: 25px 15px;
@@ -664,7 +665,7 @@
                       font-size: 24px;
                       top: -57%;
                       color: #fff;
-                      left: 30%;
+                      left: 27%;
                     }
                   }
 
