--- a/src/views/pages/index.html
+++ b/src/views/pages/index.html
@@ -18,7 +18,7 @@
                 <div class="ovelay_menu"></div>
                 <div class="main_sidenav main_sidenav_block main_sidenav_card main_sidenav_animate_right" id="rightMenu">
                     <div class="main_sidenav_info">
-                        <button onclick="" class="main_sidenav_item main_sidenav_item_button main_sidenav_item_large" id="close_menu"><i class="fas fa-times"></i></button>
+                        <button class="main_sidenav_item main_sidenav_item_button main_sidenav_item_large" id="close_menu"><i class="fas fa-times"></i></button>
                         <div class="main_sidenav_login">
                             <span class="btn_login">
                                 카카오로 로그인
@@ -32,23 +32,19 @@
                         <ul>
                             <li>
                                 <i class="fas fa-pen mr-2"></i>
-                                <a href="">패키지 검색 </a>
+                                <a href="">패키지 검색</a>
                             </li>
                            <li>
                                 <i class="fas fa-pen mr-2"></i>
-                                <a href="">패키지 검색 </a>
+                                <a href="">위시리스트</a>
                             </li>
                             <li>
                                 <i class="fas fa-pen mr-2"></i>
-                                <a href="">패키지 검색 </a>
+                                <a href="">예약 내역</a>
                             </li>
                             <li>
                                 <i class="fas fa-pen mr-2"></i>
-                                <a href="">패키지 검색 </a>
-                            </li>
-                            <li>
-                                <i class="fas fa-pen mr-2"></i>
-                                <a href="">패키지 검색 </a>
+                                <a href="">문의</a>
                             </li>
                         </ul>
                     </div>
@@ -70,7 +66,7 @@
                         </div>
                     </div>
                     <div class="list_tags_more">
-                        <ul class="scroll">
+                        <ul>
                             <li><a class="" href="#">다낭 7월 22일</a></li>
                             <li><a class=" " href="#">다낭 7월 22일 </a></li>
                             <li><a class=" " href="#">다낭 7월 22일</a></li>
@@ -95,23 +91,23 @@
                     <div class="owl-carousel owl-theme show_local" id="show_local">
                         <div class="item list_item">
                             <img src="images/background/africa.png">
-                            <h4 class="main_title"><a href="">아시아1</a></h4>
+                            <h4 class="main_title"><a href="">미주</a></h4>
                         </div>
                         <div class="item list_item">
                             <img src="images/background/chaua.png">
-                            <h4 class="main_title"><a href="">아시아2</a></h4>
+                            <h4 class="main_title"><a href="">유럽</a></h4>
                         </div>
                         <div class="item list_item">
                             <img src="images/background/namthaibinhduong.png">
-                            <h4 class="main_title"><a href="">아시아3</a></h4>
+                            <h4 class="main_title"><a href="">아시아</a></h4>
                         </div>
                         <div class="item list_item">
                             <img src="images/background/chauau.png">
-                            <h4 class="main_title"><a href="">아시아4</a></h4>
+                            <h4 class="main_title"><a href="">아프리카</a></h4>
                         </div>
                         <div class="item list_item">
                             <img src="images/background/chaumy.png">
-                            <h4 class="main_title"><a href="">아시아5</a></h4>
+                            <h4 class="main_title"><a href="">오세아니아</a></h4>
                         </div>
                     </div>
                 </section>
