--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,8 @@
 // ----------------------------------------------------------------------
 @import "pages/homepage";
 @import "pages/asian-template";
+@import "pages/tour-schedule";
+@import "pages/success-registration";
 
 // ----------------------------------------------------------------------
 // Responsive
